--- a/public/index.html
+++ b/public/index.html
@@ -22,12 +22,9 @@
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/fonts/index.css" />
 
     <title>Dashboard</title>
-    <meta
-      name="description"
-      content="The starting point for your next project with Minimal UI Kit, built on the newest version of Material-UI ©, ready to be customized to your style"
-    />
-    <meta name="keywords" content="react,material,kit,application,dashboard,admin,template" />
-    <meta name="author" content="Minimal UI Kit" />
+    <meta name="description" content="Food Ordering App" />
+    <!-- <meta name="keywords" content="react,material,kit,application,dashboard,admin,template" />
+    <meta name="author" content="Minimal UI Kit" /> -->
   </head>
 
   <body>
